--- a/examples/simple/sender/Makefile
+++ b/examples/simple/sender/Makefile
@@ -1,7 +1,13 @@
-.PHONY: build clean
+.PHONY: build build-pico2 flash-pico2 clean
 
 build:
-	go build -o sender main.go
+	go build -o sender .
+
+build-pico2:
+	tinygo build -o /dev/null -target=pico2 .
+
+flash-pico2:
+	tinygo flash -target=pico2 .
 
 clean:
 	rm -f sender
